src/objects/dupcheck__dcQueue__c.object
<CustomObject>
    <description>Hold the records which should be indexed.</description>
    <label>Duplicate Check Queue</label>
    <nameField>
        <displayFormat>DCQ{000000}</displayFormat>
        <label>DC Queue</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicate Check Queues</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>dupcheck__Priority__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Priority</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__RecordId__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__Record__c</fullName>
        <externalId>true</externalId>
        <label>Record Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>index-delete</fullName>
                </value>
                <value>
                    <fullName>index-create</fullName>
                </value>
                <value>
                    <fullName>record-delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>